[package]
name = "grayness"
version = "0.3.0"
edition = "2024"
authors = ["Nikolai Neff-Sarnow"]
description = "This is a proof of concept typst wasm-plugin to allow simple image editing functions from within typst, written in Rust."
readme = "README.md"
repository = "https://github.com/nineff/grayness"
license = "Apache-2.0"
categories = ["typst", "plugin", "image", "grayscale", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.0"
wasm-minimal-protocol = "0.1.0"
xmltree = "0.11.0"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary
opt-level = 3     # Optimize for speed
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
