[package]
name = "grayness"
version = "0.6.0"
edition = "2024"
authors = ["Nikolai Neff-Sarnow"]
description = "This is a proof of concept typst wasm-plugin to allow simple image editing functions from within typst, written in Rust."
readme = "README.md"
repository = "https://github.com/nineff/grayness"
license = "Apache-2.0"
categories = ["grayscale", "image", "plugin", "typst", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
  "bmp",
  "dds",
  "exr",
  "ff",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp"
] }
wasm-minimal-protocol = "0.1.0"
xmltree = "0.12.0"

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Strip symbols from binary
lto = "fat"  # Enable link-time optimization; see https://github.com/wasmi-labs/wasmi/blob/main/docs/usage.md
panic = "abort"  # Abort on panic
codegen-units = 1  # Reduce number of codegen units to increase optimizations
